--- a/app/views/admin/workers/show.html.erb
+++ b/app/views/admin/workers/show.html.erb
@@ -21,7 +21,7 @@
     <td><%= @worker.description %></td>
     <td><%= @worker.qualification %></td>
     <td><%= @worker.weight %></td>
-    <td><%= image_tag(@worker.avatar_url) if @worker.avatar? %></td>
+    <td><%= image_tag(@worker.avatar_url, class: 'w-32') if @worker.avatar? %></td>
     <td><%= link_to 'Edit', edit_admin_worker_path(@worker) %> | <%= link_to 'Back', admin_workers_path %></td>
   </tr>
 </table>
