--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-3">
+<div class="lg:grid lg:grid-cols-3">
   <div class="m-4 col-span-2">
     <div class="p-4 border border-gray-200">
       <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BStreet%2B-%2BSunbury%2Bon%2BThames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near&output=embed"></iframe>
