--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,7 +1,7 @@
 <%= image_tag "sign_home.png", class: 'min-w-full' %>
-<div class="grid grid-cols-7">
+<div class="lg:grid lg:grid-cols-7">
   <div class="bg-red-100">
-    <div class="flex flex-col left-menu" data-controller="left-menu">
+    <div class="flex flex-col left-menu text-center lg:text-left" data-controller="left-menu">
       <%= link_to 'Welcome', home_path('welcome'), class: add_focused_style_to_left_menu('welcome', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Private HNS', home_path('private_nhs'), class: add_focused_style_to_left_menu('private_nhs', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Emergency', home_path('emergency'), class: add_focused_style_to_left_menu('emergency', @partial), data: { turbo_frame: :tf_content } %>
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div class="grid grid-cols-7">
+<div class="lg:grid lg:grid-cols-7 lg:text-left">
   <div class="bg-red-100">
   </div>
   <div class="col-span-4 p-4">
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="col-span-2 bg-yellow-100">
-    <div class='inline-block p-4 border border-gray-200 bg-white'>
+    <div class='lg:inline-block p-4 border border-gray-200 bg-white'>
       <%= link_to 'https://www.cqc.org.uk/location/1-1474713274', target: '_blank' do %>
         <%= image_tag 'qcq_logo.png' %>
       <% end %>
@@ -43,7 +43,7 @@
       </p>
       <%= link_to 'See CQC registration details', 'https://www.cqc.org.uk/location/1-1474713274', class: 'inline-block mt-4 btn-qcq', target: '_blank' %>
     </div>
-    <div class='inline-block mt-4 p-4 border border-gray-200 bg-white'>
+    <div class='lg:inline-block mt-4 p-4 border border-gray-200 bg-white'>
       <%= link_to 'https://lead.tabeo.co.uk/sunbury-dental-practice/finance', target: '_blank' do %>
         <%= image_tag 'interest-free-loan.jpg' %>
       <% end %>
