Use real Contact model

--- a/app/views/contacts_mailer/form_submission.html.erb
+++ b/app/views/contacts_mailer/form_submission.html.erb
@@ -1,6 +1,6 @@
 <ul>
-  <li>Name:      <%= @name %></li>
-  <li>Email:     <%= @email %></li>
-  <li>Telephone: <%= @phone %></li>
-  <li>Message:   <%= @message %></li>
+  <li>Name:      <%= @contact.name %></li>
+  <li>Email:     <%= @contact.email %></li>
+  <li>Telephone: <%= @contact.phone %></li>
+  <li>Message:   <%= @contact.message %></li>
 </ul>
