--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "sign_home.png", class: 'min-w-full' %>
 <div class="lg:grid lg:grid-cols-7">
-  <div class="bg-red-100">
+  <div>
     <div class="flex flex-col left-menu text-center lg:text-left" data-controller="left-menu">
       <%= link_to 'Welcome', home_path('welcome'), class: add_focused_style_to_left_menu('welcome', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Private HNS', home_path('private_nhs'), class: add_focused_style_to_left_menu('private_nhs', @partial), data: { turbo_frame: :tf_content } %>
@@ -16,13 +16,13 @@
       </turbo-frame>
     </div>
   </div>
-  <div class="col-span-2 hidden lg:block bg-yellow-100">
+  <div class="col-span-2 hidden lg:block">
     <%= image_tag "sign_right_home.png", class: "p-2 border border-gray-200 bg-white" %>
   </div>
 </div>
 
 <div class="lg:grid lg:grid-cols-7 lg:text-left">
-  <div class="bg-red-100">
+  <div>
   </div>
   <div class="col-span-4 p-4">
     <h4>Make an appointment by contacting us today</h4>
@@ -33,7 +33,7 @@
       </turbo-frame>
     </div>
   </div>
-  <div class="col-span-2 bg-yellow-100">
+  <div class="col-span-2">
     <div class='lg:inline-block p-4 border border-gray-200 bg-white'>
       <%= link_to 'https://www.cqc.org.uk/location/1-1474713274', target: '_blank' do %>
         <%= image_tag 'qcq_logo.png' %>
