--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "sign_product.png", class: 'min-w-full' %>
 <div class="lg:grid lg:grid-cols-7">
-  <div class="bg-red-100">
+  <div>
     <div class="flex flex-col left-menu text-center lg:text-left">
       <ul>
         <li class="js-product-left-menu <%= add_focused_style_to_left_menu('what_we_do', @partial) %>"><%= link_to 'What We Do', products_path, class: 'block', data: { turbo_frame: :tf_content } %></li>
@@ -54,7 +54,7 @@
       </turbo-frame>
     </div>
   </div>
-  <div class="col-span-2 hidden lg:block bg-yellow-100">
+  <div class="col-span-2 hidden lg:block">
     <%= image_tag "sign_right_product.png", class: "p-2 border border-gray-200 bg-white" %>
   </div>
 </div>
