--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "sign_worker.png", class: 'min-w-full' %>
 <div class="lg:grid lg:grid-cols-7">
-  <div class="bg-red-100">
+  <div>
     <div class="flex flex-col left-menu text-center lg:text-left" data-controller="left-menu">
       <%= link_to 'About Us', workers_path, class: add_focused_style_to_left_menu('about_us', @partial), data: { turbo_frame: :tf_content } %>
       <%= link_to 'Practice Managers', worker_path('practice_manager'), class: add_focused_style_to_left_menu('practice_manager', @partial), data: { turbo_frame: :tf_content } %>
@@ -20,7 +20,7 @@
       </turbo-frame>
     </div>
   </div>
-  <div class="col-span-2 hidden lg:block bg-yellow-100">
+  <div class="col-span-2 hidden lg:block">
     <%= image_tag "sign_right_worker.png", class: "p-2 border border-gray-200 bg-white" %>
   </div>
 </div>
