--- a/app/views/layouts/_navs.html.erb
+++ b/app/views/layouts/_navs.html.erb
@@ -1,4 +1,4 @@
-<nav class="top-nav js-top-nav">
+<nav class="top-nav">
   <%= link_to "Home", home_path('welcome'), class: add_focused_style_to_top_nav('homes'), data: { turbo: false } %>
   <%= link_to "About Us", workers_path, class: add_focused_style_to_top_nav('workers'), data: { turbo: false } %>
   <%= link_to "What We Do", products_path, class: add_focused_style_to_top_nav('products'), data: { turbo: false } %>
