--- a/app/views/advices/show.html.erb
+++ b/app/views/advices/show.html.erb
@@ -14,9 +14,9 @@
     <h2>Our Helpful Tips</h2>
 
     <div class="mt-4 content">
-      <turbo-frame id="tf_content">
+      <%= turbo_frame_tag :tf_content do %>
         <%= render partial: @partial %>
-      </turbo-frame>
+      <% end %>
     </div>
   </div>
   <div class="col-span-2 hidden lg:block">
