--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="tf_contact_form">
+<%= turbo_frame_tag :tf_contact_form do %>
   <% if @contact.errors.any? %>
     <%= render partial: 'shared/form_error', locals: { form_object: @contact } %>
 
@@ -6,5 +6,4 @@
   <% else %>
     <%= render partial: 'shared/form_success', locals: { form_object: @contact } %>
   <% end %>
-</turbo-frame>
-
+<% end %>
