--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,9 +53,9 @@
     <h2>Quality Guaranteed</h2>
 
     <div class="mt-4 content">
-      <turbo-frame id="tf_content">
+      <%= turbo_frame_tag :tf_content do %>
         <%= render @partial %>
-      </turbo-frame>
+      <% end %>
     </div>
   </div>
   <div class="col-span-2 hidden lg:block">
