Fix typo on address

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -29,8 +29,8 @@
   <div class="mt-4 lg:mt-0">
     <div>
       <i class="fa-solid fa-location-dot text-sunbury"></i>
-      <%= link_to "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BSdiveet%2B-%2BSunbury%2Bon%2Bpames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", class: "font-bold", target: "_blank" do %>
-        145 Green Sdiveet - <span>Sunbury on pames - </span>Middlesex - TW16 6QL
+      <%= link_to "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=145%2BGreen%2BStreet%2B-%2BSunbury%2Bon%2BThames%2B-%2BMiddlesex%2B-%2BTW16%2B6QL&ie=UTF8&z=14&t=m&iwloc=near", class: "font-bold", target: "_blank" do %>
+        145 Green Street - <span>Sunbury on Thames - </span>Middlesex - TW16 6QL
       <% end %>
     </div>
     <div>
